# omero-user-token

./: .gitignore  README.md  appveyor.yml  pyproject.toml  requirements-dev.txt  setup.py  version.py
.github/workflows/: workflow.yml
omero_user_token/: __init__.py  version.py
omero_user_token/cli/: omero_user_token.py
tests/: test_token.py
