[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "omero-user-token"
description = "OMERO user token management system"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    'click>=7.0',
    'configparser==4.0.2',
    'omero-py>5.6',
]
requires-python = ">=3.9"
authors = [
    {name = "Glencoe Software, Inc.", email="info@glencoesoftware.com"},
]

[project.urls]
Repository = "https://github.com/glencoesoftware/omero-user-token"

[project.scripts]
omero_user_token = "omero_user_token.cli.omero_user_token:main"
omero-user-token = "omero_user_token.cli.omero_user_token:main"


[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools_scm]